src/Calendar/styles.css
:root {
    --white: #ffffff;

    --zinc-50: #fafafa;
    --zinc-100: #f4f4f5;
    --zinc-200: #e4e4e7;
    --zinc-300: #d4d4d8;
    --zinc-400: #a1a1aa;
    --zinc-500: #71717a;
    --zinc-600: #52525b;
    --zinc-700: #3f3f46;
    --zinc-800: #27272a;
    --zinc-900: #18181b;
    --zinc-950: #09090b;

    --blue-50: #eff6ff;
    --blue-100: #dbeafe;
    --blue-200: #bfdbfe;
    --blue-300: #93c5fd;
    --blue-400: #60a5fa;
    --blue-500: #3b82f6;
    --blue-600: #2563eb;
    --blue-700: #1d4ed8;
    --blue-800: #1e40af;
    --blue-900: #1e3a8a;
    --blue-950: #172554;

    --font-normal: 400;
    --font-medium: 500;
    --font-semibold: 600;
    --font-bold: 700;

    color: var(--zinc-950);
}

.calendar-Table {
    border-spacing: 8px;
}

.calendar-Heading {
    display: flex;
    align-items: center;
    gap: 12px;
    width: 100%;
    justify-content: space-between;
}

.calendar-Heading h2 {
    font-size: 1.2rem;
    font-weight: var(--font-medium);
}

.calendar-Weekday {
    font-size: 0.8rem;
    font-weight: var(--font-bold);
}

.calendar-Day {
    width: 32px;
    height: 32px;
    text-align: center;
    border-radius: 50%;
}

.calendar-Day:hover {
    background-color: var(--zinc-200);
}

.calendar-Day[data-focused="true"] {
    box-shadow:
        0 0 0 2px var(--white),
        0 0 0 4px var(--blue-500);
    background-color: var(--white);
}

.calendar-Day[data-focused="true"]:hover {
    background-color: var(--zinc-200);
}

.calendar-Day[data-focused="true"] span {
    outline: none;
}

.calendar-Day[data-selected="true"] {
    background-color: var(--blue-700);
    color: var(--white);
}

.calendar-Day[data-selected="false"][data-today="true"][data-focused="false"] {
    box-shadow:
        0 0 0 2px var(--white),
        0 0 0 4px var(--zinc-300);
    background-color: var(--white);
}

.calendar-Day[data-selected="false"][data-today="true"][data-focused="false"]:hover {
    background-color: var(--zinc-200);
}

.calendar-NavigationButton {
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: none;
    border: none;
}

.calendar-NavigationButton:hover {
    background-color: var(--zinc-200);
    border-radius: 4px;
}

.calendar-NavigationButton svg {
    widht: 24px;
    height: 24px;
}

.calendar-Hidden {
    border: 0px;
    clip: rect(0px, 0px, 0px, 0px);
    clip-path: inset(50%);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0px;
    position: absolute;
    width: 1px;
    white-space: nowrap;
}

